--- a/Assets/Scripts/Tests/Play/Play.asmdef
+++ b/Assets/Scripts/Tests/Play/Play.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GameAssembly"
+        "GameAssembly",
+        "Unity.TextMeshPro",
+        "Unity.Multiplayer.MLAPI.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
